--- a/revert.html
+++ b/revert.html
@@ -1,42 +1,55 @@
-<script type="text/javascript">
-  function reverseString(str) {
-    array = str.split("")
-    array = array.reverse()
-    str = array.join("")
-    return str;
-  }
+<html>
 
-
-
-  function add(n) {
-    var a1 = 1;
-    var a2 = 1;
-    for (var i = 3; i <= n; i++) {
-      var an = a1 + a2;
-      a1 = a2;
-      a2 = an;
+<body>
+  <script type="text/javascript">
+    function reverseString(str) {
+      array = str.split("")
+      array = array.reverse()
+      str = array.join("")
+      return str;
     }
-    return an;
-  }
-  console.log(add(5));
 
 
 
-  function add(x, y) {
-    var result = x * y;
-    return result;
-  }
-  var r = add(1, 2);
-  console.log(r)
+    function add(n) {
+      var a1 = 1;
+      var a2 = 1;
+      for (var i = 3; i <= n; i++) {
+        var an = a1 + a2;
+        a1 = a2;
+        a2 = an;
+      }
+      return an;
+    }
+    console.log(add(5));
 
 
+    function a(str) {
+      for (var i = 0; i < str.length; i++) {
+        if (str[i] == "1") {
+          str = str.replace("1", "2");
+        }
+      }
+      return str;
+    }
 
-  function a(str) {
-    for (var i = 0; i < str.length; i++) {
-      if (str[i] == "1") {
-        str = str.replace("1", "2");
+    var sum = 0;
+    for (var i = 1; i <= 100; i++) {
+      if (i % 3 != 0) {
+        sum += i;
+        console.log(i);
       }
     }
-    return str;
-  }
 
+
+    var sum = 0;
+    for (var i = 1; i <= 100; i++) {
+      if (i % 3 != 0) {
+        sum += i;
+        console.log(i);
+      }
+    }
+  </script>
+</body>
+
+</html>
